--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,7 @@
-<<<<<<< HEAD
-/*/target/*
-*.class
-*.lock
-*.DS_Store
-*.swp
-*.out
-target/
-*.iml
-*.ipr
-*.iws
-*.bak
-.settings/
-.classpath
-.project
-.metadata/
-.idea/
-*.log
-*.lnk
-.eclipse/
-data/
-/src/main/resources/logback.xml
-/.idea/
-=======
 # Compiled class file
 *.class
+*.classpath
+*.factorypath
 
 # Log file
 *.log
@@ -37,7 +15,6 @@ data/
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
@@ -45,4 +22,13 @@ data/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
->>>>>>> 61295e0aba120aa611d7849a759add0afbce0d86
+
+# IDE Files #
+*.iml
+.idea
+.idea/
+.project
+.settings
+target
+.DS_Store
+
